# datasetcolab

./: .gitignore  JavaServerApplication.java  LICENSE  OtherPretrainedModels.js  README.md  conversion.py  features.txt  roboflowTypes.txt  run.sh  settings.gradle
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: COCOtoTFRecord.py  COCOtoYOLO.py  build.gradle  cocoToYolo.py  combine.py  combine2.py  combineDatasets.py  currentDataset.json  error.txt  getPendingMerge.py  getsize.sh  inferenceImagesNames.py  initadmin.sh  purgeDownload.py  run.py  simplifyAnnotations.py  transformInferenceImages.py
app/sdshghMain/test/: combined_annotations.json
aws-lambda-server/api/: Cargo.toml
aws-lambda-server/auth/: Cargo.toml
aws-lambda-server/auth/src/: main.rs
aws-lambda-server/dataset-annotations/: Cargo.toml
aws-lambda-server/dataset-annotations/src/: main.rs
aws-lambda-server/dataset-classes/: Cargo.toml
aws-lambda-server/dataset-delete/: Cargo.toml
aws-lambda-server/dataset-download/: Cargo.toml
aws-lambda-server/dataset-download/src/: main.rs
aws-lambda-server/dataset-metadata/: Cargo.toml
aws-lambda-server/dataset-metadata/src/: main.rs
aws-lambda-server/dataset-upload/: Cargo.toml
aws-lambda-server/dataset-view/: Cargo.toml
aws-lambda-server/model-download/: Cargo.toml
aws-lambda-server/model-download/src/: main.rs
aws-lambda-server/model-inference/: Cargo.toml
aws-lambda-server/model-inference/src/: main.rs
aws-lambda-server/model-performance/: Cargo.toml
aws-lambda-server/model-performance/src/: main.rs
aws-lambda-server/model-performance2/: Cargo.toml
combine/src/: COCOtoTFRecord.rs
combineRust/: Cargo.toml
combineRust/src/: main.rs
datasetCombine/: README.roboflow.txt
datasetCombine/test/: _annotations.coco.json
datasetCombine/train/: _annotations.coco.json
datasetCombine/valid/: _annotations.coco.json
lambdaInference/test/: test_api.py
my-app/: bun.lockb  package.json  tsconfig.json
my-app/app/: layout.tsx  page.tsx
my-app/app/[userId]/: page.jsx
my-app/app/draw/: DrawableCanvas.css
my-app/app/repositories/: page.tsx
my-app/components/: left-nav.tsx  right-nav.tsx  site-header.tsx
my-app/components/auth/: loginDialog.tsx  loginDialogDesktop.tsx  loginDialogMobile.tsx  logoutUser.tsx  setCookie.ts
my-app/config/: site.ts
my-app/types/: typing.d.ts
new-website/: .gitignore  package.json  tsconfig.json
new-website/app/: layout.tsx  page.tsx
new-website/app/[userId]/: page.jsx
new-website/app/about/: page.tsx
new-website/app/draw/: page.tsx
new-website/app/explore/: page.tsx
new-website/app/firebase/: GetUser.js  config.js
new-website/app/settings/: page.tsx
new-website/components/auth/: loginButton.tsx  loginDialogDesktop.tsx  loginLogout.tsx  logoutUser.tsx
new-website/components/framerMotion/: collaboration.tsx  feautures.tsx
new-website/components/homepage/: newDatasetDialog.tsx  topBanner.tsx
new-website/components/navbar/: commandK.tsx  currentNavbar.tsx  userNavbar.tsx  visitorNavbar.tsx
nextjswebsite/: .env.local  .gitignore  README.md  bun.lockb  package.json
nextjswebsite/.next/: trace
nextjswebsite/.next/server/: _error.js  edge-runtime-webpack.js  middleware.js  next-font-manifest.js  server-reference-manifest.js  webpack-runtime.js
nextjswebsite/app/: globals.css  layout.tsx  page.tsx
nextjswebsite/app/draw/: page.tsx
nextjswebsite/app/login/: page.tsx
nextjswebsite/app/repositories/: page.tsx
nextjswebsite/app/test123/: page.tsx
nextjswebsite/components/: ChatHeader.tsx
nextjswebsite/components/auth/: AuthContext.tsx
nextjswebsite/hooks/: useDraw.tsx
nextjswebsite/lib/supabase/: browser.ts  server.ts
otherJava/: DatasetManagement.java
server/: cert.pem  key.pem  package.json  server.js
server/combine/: Cargo.toml
server/combine/src/: COCOtoYOLO.rs
server/fargate/dataset-upload/: Cargo.toml  Dockerfile  requirements.txt
server/fargate/dataset-upload/src/: COCOtoYOLO.py  combine.py  combine.rs  demo.py  main.py  mergeCOCO.py
server/inference/: squeezenet1.0-8.onnx
server/lambda/dataset-download/: Cargo.toml
server/lambda/dataset-upload/: Cargo.toml
server/lambda/dataset-upload-status/: Cargo.toml
server/lambda/dataset-upload/src/: main.rs
server/lambda/dataset-view/: Cargo.toml
server/lambda/model-inference/: Cargo.toml
server/lambda/repository-exists/: Cargo.toml
server/lambda/roboflow-exists/: Cargo.toml
server2/api/: Cargo.toml
server2/api/src/: main.rs
server2/datasets-upload/: Cargo.toml
server2/datasets-upload/src/: main.rs
server2/repository-exists/src/: main.rs
server2/repository-init/: Cargo.toml
server2/repository-init/src/: main.rs
server2/repository-metadata/: Cargo.toml
severTest/: Main.java
website/: .firebaserc  .gitignore  package-lock.json  package.json
website/.firebase/: hosting.YnVpbGQ.cache
website/public/: index.html  manifest.json
website/src/: App.js  firebase.js  index.js  server.js
website/src/components/: Dashboard.js  DocsMarkdownViewer.js  EmailVerification.js  ForgotPassword.js  Login.js  Navbar.js  Signup.js  UpdateProfile.js
website/src/contexts/: AuthContext.js  PrivateRoute.js
website/src/docs/: YOLOv5n.md  YOLOv5s.md  YOLOv6n.md  YOLOv6s.md  YOLOv8n.md  YOLOv8s.md  efficientdet.md  run.py  ssdmobilenet.md
website/src/pages/: AboutUs.js  Dashboard.js  DeleteAccount.js  Docs.js  DownloadDataset.js  EmailVerification.js  EmbeddedDownload.js  ForgotPassword.js  Home.js  Login.js  Settings.js  (+8 more)
(+522 files in other folders)
