[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9.3"
lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
openssl = { version = "0.10.35", features = ["vendored"] }
aws-sdk-s3 = "1.16.0"
aws-config = "1.1.6"
