[package]
name = "dataset-download"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
clap = "4.5.1"
http = "1.0.0"
lambda_http = "0.9.3"
lambda_runtime = "0.9.2"
reqwest = "0.11.24"
openssl = { version = "0.10.35", features = ["vendored"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
hyper = "1.2.0"
