[package]
name = "model-download"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9.3"
lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
openssl = { version = "0.10.35", features = ["vendored"] }
rusoto_s3 = "0.48.0"
warp = "0.3.6"
rusoto_core = "0.48.0"
