[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.10.0"
lambda_runtime = "0.9.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
rusoto_dynamodb = "0.48.0"
openssl = { version = "0.10.35", features = ["vendored"] }
tokio = { version = "1", features = ["macros"] }
rusoto_core = "0.48.0"
rand = "0.8.5"
maplit = "1.0.2"
