[package]
name = "dataset-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
tokio = { version = "1", features = ["macros"] }
openssl = "0.10.64"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_s3 = "0.48.0"
