[package]
name = "dataset-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9.3"
lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
openssl = { version = "0.10.35", features = ["vendored"] }
rusoto_s3 = "0.48.0"
rusoto_dynamodb = "0.48.0"  
rusoto_core = "0.48.0"
serde_dynamodb = "0.9.0"
rusoto_secretsmanager = "0.48.0"
rusoto_ec2 = "0.48.0"
url = "2.5.0"
reqwest = "0.11.24"
serde_json = "1.0.114"
tempfile = "3.10.1"
zip = "0.6.6"
rand = "0.8.5"
